alignment issue fixed

--- a/src/app.css
+++ b/src/app.css
@@ -3,3 +3,6 @@
     width: 100%;
     background-color: aliceblue;
 }
+.body-container{
+    margin : 10px;
+}
